update spelling: intreat > entreat

--- a/journal/modernized/03-letters.adoc
+++ b/journal/modernized/03-letters.adoc
@@ -1089,7 +1089,7 @@ keeping God,`" and wholly and unreservedly give yourself unto Him.
 The retrospect of the past, I doubt not,
 is often clouded by the recollection of many sins of omission and commission.
 "`The unpaid vow, the broken covenant, the failed resolution.`"
-After using these words, R. B. intreated us to bring these unto Jesus;
+After using these words, R. B. entreated us to bring these unto Jesus;
 and it is in doing this, and in casting all your care upon Him,
 that I believe you will find sweetly refreshing rest unto your soul,
 and be enabled to trust your all in His hands.
