--- a/journal/original/02-journal.adoc
+++ b/journal/original/02-journal.adoc
@@ -711,7 +711,7 @@ and no friend departs.`"
 It-matters little, our being early called to a separation on earth,
 if we can joyfully look forward to a re-union in heaven!
 
-My dear brothers and sisters! let me intreat you
+My dear brothers and sisters! let me entreat you
 always to begin and finish the day with prayer;
 in the morning seek direction to act rightly during the day.
 I have found from experience that I can, of myself, do no good thing,
