--- a/journal/original/03-letters.adoc
+++ b/journal/original/03-letters.adoc
@@ -540,7 +540,7 @@ by which, the apostle assures us, every man`'s work shall be tried.
 
 Many indeed are the cares which surround thee,
 appearing particularly calculated to retard thy progress in the way everlasting; but,
-my beloved mother, let me affectionately intreat thee, not to permit them to do so.
+my beloved mother, let me affectionately entreat thee, not to permit them to do so.
 Looking continually for help from above--casting thy cares on Him who is able and
 willing to bear them--mayest thou daily experience a renewal of strength,
 and be favoured to know, from time to time,
@@ -1085,12 +1085,12 @@ even to cry to thee, "`Peace, peace, when there is no peace.`"
 No!
 I would not help to raise a barrier which must be broken down ere an
 admission can be administered to any into the land of light;
-but I would intreat thee to trust in the faithfulness of a "`covenant
+but I would entreat thee to trust in the faithfulness of a "`covenant
 keeping God,`" and wholly and unreservedly give thyself unto Him.
 The retrospect of the past, I doubt not,
 is often clouded by the recollection of many sins of omission and commission.
 "`The unpaid vow, the broken covenant, the failed resolution.`"
-After using these words, R. B. intreated us to bring these unto Jesus;
+After using these words, R. B. entreated us to bring these unto Jesus;
 and it is in doing this, and in casting all thy care upon Him,
 that I believe thou wilt find sweetly refreshing rest unto thy soul,
 and be enabled to trust thy all in His hands.
@@ -1197,14 +1197,14 @@ oh that I could impress upon thy heart a right
 sense of her weakness and inability to help thee,
 as she would desire, in the heavenly way.
 Whilst, I trust, we may know increasing union of spirit, I must, dearest Charles,
-intreat thee to look from her to the Shepherd of Israel for help,
+entreat thee to look from her to the Shepherd of Israel for help,
 and to depend wholly for guidance upon Him!
 Be more steadfast, my dear brother,
 in His service! more constantly seek the knowledge of His will,
 and ability to perform it!
 Oh I would that thou shouldst be "`complete in
 Christ,`" that "`He may be thy all in all.`"
-I must intreat thee, my beloved brother,
+I must entreat thee, my beloved brother,
 to crave ability to commit me unreservedly to the care of Him,
 who has so mercifully cared for me all the days of my life, and who, I can still believe,
 will help me to my journey`'s end.
