--- a/journal/modernized/02-journal.adoc
+++ b/journal/modernized/02-journal.adoc
@@ -524,7 +524,7 @@ children with the food convenient for them.
 
 London, 6mo. 3rd.--This evening has proved one of the most painful,
 yet one of the most precious of my short life; my earnest request has been complied with,
-and I have been brought most deeply to feel my own short-comings,
+and I have been brought most deeply to feel my own shortcomings,
 my own many backslidings!
 Oh! I have kept far behind my gracious guide, and when I remember His unutterable mercy,
 when I reflect on His fathomless love toward me, I am almost overwhelmed with sorrow.
@@ -1742,7 +1742,7 @@ increase my weak faith, give me a deeper sense of sin, and enable me, I humbly a
 to grow in grace and in the knowledge of my Lord and Saviour Jesus Christ, to whom,
 and to you, O gracious Father, be all praise forever ascribed.
 In recurring to some of the events of the past year, and of the path,
-wherein I have walked, I am, I trust, deeply humbled under a sense of my short comings;
+wherein I have walked, I am, I trust, deeply humbled under a sense of my shortcomings;
 while at the same time,
 I feel renewed cause to trust in the Lord--to give myself more entirely to Him.
 Very earnest, at seasons, have my desires been in the last year to become wholly His,
@@ -2004,7 +2004,7 @@ Oh, may the Lord alone be my God.
 gratitude was the covering of my spirit,
 in the belief that I have been preserved from doing
 harm to the precious cause of righteousness;
-while at the same time the remembrance of many, many short comings,
+while at the same time the remembrance of many, many shortcomings,
 ought deeply to humble me; in some degree, I trust, they have done so,
 and incited more earnest desires for a closer walking with God.
 May my heavenly Shepherd, become more and more my all in all;
@@ -2020,7 +2020,7 @@ events proved the instability of all things here;
 and while this has been much impressed upon my heart, renewed desires have arisen there,
 that I may be found abiding at the feet of Jesus;
 but the things of time have too much engaged my attention, and many, very many,
-have been my short comings--still the mercy of my heavenly Shepherd has been unfailing,
+have been my shortcomings--still the mercy of my heavenly Shepherd has been unfailing,
 and as I write, I feel bound to acknowledge, with heartfelt gratitude,
 that to me it has been new every morning.
 Oh how great is His faithfulness! may I be enabled more and more to trust in Him.
@@ -3216,7 +3216,7 @@ I have witnessed the "`putting off of mortality,`" and in that
 solemn moment have deeply felt the preciousness of the hope
 which makes not ashamed--"`repentance towards God,
 and faith in our Lord Jesus Christ.`"
-The remembrance of many, many short comings, ought deeply to humble me,
+The remembrance of many, many shortcomings, ought deeply to humble me,
 while the hope of having made a few straight steps,
 would lead me to "`thank God and take courage.`"
 Convinced that He alone can strengthen His children to perform His holy will, I would,
@@ -3746,7 +3746,7 @@ and I was afterwards enabled vocally to supplicate on
 her behalf at the footstool of divine mercy.
 On my return home the remembrance of this produced very solemn feelings in my mind.
 Another week, marked with many mercies, is now drawing to a close,
-and while feeling my own many short comings,
+and while feeling my own many shortcomings,
 and renewedly made sensible of the goodness of the Lord,
 I desire afresh to commit myself, and all who are dear to me, to His keeping,
 only asking that His will may be accomplished.
@@ -4089,7 +4089,7 @@ sanctifying power of His Spirit.
 and conveyed much consolation.
 My heart glowed with love to my fellow creatures;
 and a retrospect of the past year so richly marked with mercy,
-although by such continued short comings,
+although by such continued shortcomings,
 was accompanied by most ardent desire for ability to follow on to know the Lord.
 Deeply feeling my own unworthiness,
 but having a more constant sense of the fulness there is in Jesus,
@@ -4198,7 +4198,7 @@ and strengthen them to go forwards--enabling them confidently to
 trust that you will be also their "`exceeding great reward!`"
 And to those of our family who have not yet tasted of your goodness,
 be graciously pleased still to extend your omnipotent arm;
-make them deeply sensible of their short coming, and of the precious truth, that you,
+make them deeply sensible of their shortcomings, and of the precious truth, that you,
 Lord, are "`good, and ready to forgive,
 and plenteous in mercy unto all that call upon you!`"
 Oh leave them not, until, either to the voice of your love, or of your judgment,
