update spelling: birth-day > birthday

--- a/journal/original/02-journal.adoc
+++ b/journal/original/02-journal.adoc
@@ -405,7 +405,7 @@ beloved companions at +++______+++. We have again parted,
 and the future seems lost in obscurity; but, blessed Saviour, may thy love unite us;
 and oh, grant that we may rest at last in thy everlasting kingdom of peace and joy.
 
-26th--My seventeenth birth-day!
+26th--My seventeenth birthday!
 Another year of my life has rolled rapidly away,
 and one which has been peculiarly marked with mercies.
 Dear and ever adorable Redeemer, thou hast been pleased, in the past year,
@@ -2195,7 +2195,7 @@ and in a few minutes quietness permitted to know renewal of strength.
 I cannot go safely on without continually seeking divine protection,
 my feet slide if my eyes are not ever towards the Lord,
 
-18th.--Dear +++_______+++`'s twenty-third birth-day.
+18th.--Dear +++_______+++`'s twenty-third birthday.
 Ere another year has passed she will, most probably, have entered an untried path;
 but oh, how earnestly do I desire, that she may be led and guided by Him,
 with whom is no variableness nor shadow of turning.
