require period after etc

--- a/journal/original/02-journal.adoc
+++ b/journal/original/02-journal.adoc
@@ -2703,7 +2703,7 @@ my heart was filled with living desires,
 that the food so graciously permitted to be handed to us, by a devoted follower of Jesus,
 might be blessed to me and all my friends.
 
-The contemplation of my own path, my many mercies, etc, so completely overpowered me,
+The contemplation of my own path, my many mercies, etc., so completely overpowered me,
 that, for some time, I felt it a comfort to be alone,
 to pour out my soul at the feet of my Saviour, and to crave preservation of Him,
 for my wandering footsteps, in those paths in the wilderness, which, at times,
@@ -4524,7 +4524,7 @@ but was shortly to be anchored on the everlasting shore.
 
 About the middle of the 3rd month she was so tried with the noise of the city,
 that a removal was suggested, as a means of relief, to which she readily assented.
-In her directions, and little preparatory arrangements of books, clothes, etc,
+In her directions, and little preparatory arrangements of books, clothes, etc.,
 it was very evident that she was contemplating a final farewell to her father`'s house.
 In the easy carriage of a friend, she bore the removal better than had been expected;
 and for some days after taking possession of the pleasant lodgings at the Hotwells,
