tweaks/fixes from testing asciidoc lexer

--- a/journal/original/02-journal.adoc
+++ b/journal/original/02-journal.adoc
@@ -1100,7 +1100,8 @@ Parted from dear +++_______+++, with the probability of many years, at least, pa
 ere we may again be permitted to meet, but we shall, I humbly trust, meet in spirit,
 and oh that we may be strengthened to pray for each other!
 In recurring to the events of this day, gratitude is the covering of my spirit.
-"`14th.-Awoke under a precious sense of divine love,
+
+14th.--Awoke under a precious sense of divine love,
 and my desires were earnest to keep close to my heavenly guide; but after breakfast,
 I was unwatchful,
 and spent too much time in listening to conversation
