tweaks and fixes from new lexer/parser

--- a/journal/modernized/02-journal.adoc
+++ b/journal/modernized/02-journal.adoc
@@ -3467,9 +3467,10 @@ and keep my thoughts fixed on Him.
 I was permitted to experience strength and refreshment
 in the contemplation of the Christian`'s armour.
 I long to be more constantly bearing all of it.
-"`The shield of faith`"--oh how sweet the assurance--wherewith
-you shall be able to quench all the fiery darts of the wicked.`
-Oh that this shield may be ours, that we may be able to "`stand in the day of battle.`"
+"`The shield of faith`"--oh how sweet the assurance--
+"`wherewith you shall be able to quench all the fiery darts of the wicked.`"
+Oh that this shield may be ours,
+that we may be able to "`stand in the day of battle.`"
 In the afternoon I was, at times, completely overcome;
 many mingled feelings bowed down my spirit,
 yet I was strengthened to approach the divine footstool,
