--- a/journal/original/03-letters.adoc
+++ b/journal/original/03-letters.adoc
@@ -1023,7 +1023,7 @@ I have just gained permission to write to thee, my dearest Elizabeth, and I am g
 although with a trembling hand, to avail myself of it.
 It is with peculiar feelings of interest I watch the approach of thy coming birthday,
 because I believe thou mayest feel encouraged to
-press forwards in the "`straight and narrow way.`
+press forwards in the "`straight and narrow way.`"
 
 The angel of affliction has visited thee,
 and I trust has conveyed a lesson of instruction never to be forgotten.
