fix footnote that should have been on heading

--- a/journal/modernized/01-preface.adoc
+++ b/journal/modernized/01-preface.adoc
@@ -1,4 +1,6 @@
-== Preface
+== Preface^
+footnote:[Written by a valued friend who was intimately acquainted with,
+but not related to, Mary Ann Gilpin.]
 
 [verse]
 ____
@@ -32,6 +34,4 @@ henceforth there is laid up for me a crown of righteousness, which the Lord,
 the righteous Judge, will give me at that day, and not to me only,
 but also unto all those that love His appearing.`"
 Then will they, with her, also experience, that the work of righteousness shall be peace,
-and the effect thereof, quietness and assurance forever.^
-footnote:[Written by a valued friend who was intimately acquainted with,
-but not related to, Mary Ann Gilpin.]
+and the effect thereof, quietness and assurance forever.
