update spelling sea-side -> seaside

--- a/journal/modernized/02-journal.adoc
+++ b/journal/modernized/02-journal.adoc
@@ -4110,7 +4110,7 @@ under a renewed and deep sense of unworthiness, I would earnestly pray,
 that you would keep, preserve, and strengthen me in the way of your commandments.
 
 [.offset]
-+++[+++It was thought that the air of the sea-side might prove beneficial to her,
++++[+++It was thought that the air of the seaside might prove beneficial to her,
 and she was removed at this time to Aberystwith.]
 
 7mo. 4th.--My thoughts during the journey were not so
