--- a/journal/original/02-journal.adoc
+++ b/journal/original/02-journal.adoc
@@ -4116,7 +4116,7 @@ under a renewed and deep sense of unworthiness, I would earnestly pray,
 that thou wouldst keep, preserve, and strengthen me in the way of thy commandments.
 
 [.offset]
-+++[+++It was thought that the air of the sea-side might prove beneficial to her,
++++[+++It was thought that the air of the seaside might prove beneficial to her,
 and she was removed at this time to Aberystwith.]
 
 7mo. 4th.--My thoughts during the journey were not so
